syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

message StoreSecretRequest {
	optional string namespace = 1;
	optional string name = 2;
	optional bytes data = 3;
}